@@ -49,7 +49,7 @@ kann hier herunter geladen werden:</p>
   im <a href="./doc/gpg4win-compendium-de.html">Gpg4win-Kompendium</a>.
   </p>
   <p>Lesen Sie die aktuelle <a
-      href="http://ftp.gpg4win.org/README-2.0.2.de.txt">README-Datei</a>.
+      href="http://ftp.gpg4win.org/README-VERSION.de.txt">README-Datei</a>.
 
 <h2>Gpg4win-Kompendium COMPENDIUM_VERSION_DE</h2>
 
