@@ -50,7 +50,7 @@ and the English novice manual) of Gpg4win VERSION here:</p>
       href="documentation.html">documentation</a>).</p>
   </p>
   <p>Read the current <a
-      href="http://ftp.gpg4win.org/README-2.0.2.en.txt">README file</a>.
+      href="http://ftp.gpg4win.org/README-VERSION.en.txt">README file</a>.
 
 <h2>Gpg4win Compendium COMPENDIUM_VERSION_DE (German!)</h2>
 
