@@ -1,3 +1,7 @@
+2010-05-29  Werner Koch  <wk@g10code.com>
+
+	* website/versions.m4: Post release update.
+
 2010-05-28  Emanuel Schuetze <emanuel@intevation.de>
 
 	* website/index.htm4, website/index-de.htm4
